# aiogan

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
bot/: bot.py
bot/app/: config_reader.py
bot/app/config/: botexample.ini
bot/app/handlers/: common.py  paint.py  style.py
bot/models/: networks.py
bot/painting_mode/: inference.py  test.py  utils.py
bot/stylization_mode/: network.py  style_menu.py  test.py  utils.py
src/bot/: bot.py
src/painting_mode/: model.py  utils.py
tests/: test_ganbot.py
