[tool.poetry]
name = "ganbot"
version = "0.1.0"
description = ""
authors = ["qamaz <solgrini@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^1.6.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
aiogram = "^2.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
